# AI_Diplomacy

./: .env.example  .gitignore  BENCHMARK.md  DIPLOMACY_ANALYSIS_DOCUMENTATION.md  LICENSE  Makefile  README.md  ai_designed_games_research.md  analyze_hold_reduction.py  analyze_single_game_orders.py  benchmark_results.ipynb  cicero_bridge.py  commit_message.txt  config.py  deep_cut_ai_research.md  diplomacy_unified_analysis_final.py  docker-compose.yaml  experiment_runner.py  llm_moral_reasoning_beyond_trolley.md  llm_moral_reasoning_trolley_problem.md  lm_game.py  package-lock.json  package.json  pyproject.toml  quirky_ai_games_research.md  run.sh  run_benchmark.py  similar_games_research.md  social_psychology_simulations.md  support_explanation_ablations_csa.ipynb  visualization_experiments_log.md
ai_diplomacy/: agent.py  agent.ts  cicero_agent_enhanced.py  cicero_client.py  clients.py  clients.ts  diary_logic.py  formatter.py  game_history.py  game_history.ts  game_logic.py  initialization.py  initialization.ts  llms.txt  long_story_short.py  narrative.ts  ndai_server.py  negotiations.py  negotiations.ts  planning.ts  possible_order_context.py  possible_order_context.ts  prompt_constructor.py  prompt_constructor.ts  template_renderer.py  utils.py  utils.ts
analysis/: readme.md  (+9 more)
prompt_api/: .env.example  Dockerfile  README.md  __init__.py  auth.py  database.py  main.py  migrate_prompts.py  models.py  pyproject.toml  schemas.py
prompt_api/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_games.py  test_health.py  test_integration.py  test_prompts.py
(+190 files in other folders)
